Style - Fixed a styling bug that caused comments on posts container to be too close

--- a/src/Components/ContentView/PostView/PostList/PostListItem/PostReplyList/ReplyToPost/ReplyToPost.css
+++ b/src/Components/ContentView/PostView/PostList/PostListItem/PostReplyList/ReplyToPost/ReplyToPost.css
@@ -8,6 +8,7 @@
 .reply-container-item {
     display: flex;
     width: 100%;
+    margin-left: 15px;
     align-items: center;
     justify-content: left;
 }
